--- a/main.css
+++ b/main.css
@@ -21,5 +21,37 @@
 .card-right {
   background-color: var(--dark-cyan);
   border-radius: 15px;
+  max-width: 415px;
   padding: 40px;
+  width: 100%;
+}
+
+.card-price-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-price-container:first-child {
+  margin-bottom: 25px;
+}
+
+.card-price-title {
+  color: #fff;
+  font-weight: bold;
+}
+
+.card-price-subtitle {
+  font-weight: bold;
+  color: var(--gray);
+}
+
+.card-price-value {
+  font-weight: bold;
+  color: var(--bright-cyan);
+}
+
+.btn-reset {
+  margin-top: 120px;
+  width: 100%;
 }
