--- a/main.css
+++ b/main.css
@@ -16,6 +16,39 @@
 
 .card-left {
   margin-right: 48px;
+  flex-grow: 1;
+}
+
+.input-label {
+  display: block;
+  font-weight: bold;
+  color: var(--lightest-cyan);
+  margin-bottom: 6px;
+}
+
+.input-field {
+  font-weight: bold;
+  text-align: right;
+  outline: none;
+  border: none;
+  border: 2px solid transparent;
+  background-color: var(--light);
+  color: var(--dark-cyan);
+  padding: 6px 18px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.input-field:focus {
+  border: 2px solid var(--bright-cyan);
+}
+
+.input-field::placeholder {
+  color: rgba(0, 71, 75, 0.35);
+}
+
+.input-group:not(:last-child) {
+  margin-bottom: 40px;
 }
 
 .card-right {
