--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@
   border: 2px solid transparent;
   background-color: var(--light);
   color: var(--dark-cyan);
-  padding: 6px 18px;
+  padding: 6px 18px 6px 38px;
   border-radius: 5px;
   width: 100%;
 }
@@ -47,8 +47,31 @@
   color: rgba(0, 71, 75, 0.35);
 }
 
+.input-group {
+  position: relative;
+}
+
 .input-group:not(:last-child) {
   margin-bottom: 40px;
+}
+
+.input-group::before {
+  position: absolute;
+  content: '';
+  bottom: 16.5px;
+  left: 18px;
+}
+
+#totalBillGroup::before {
+  background: no-repeat url('./assets/icon-dollar.svg');
+  height: 17px;
+  width: 11px;
+}
+
+#numberOfPeopleGroup::before {
+  background: no-repeat url('./assets/icon-person.svg');
+  height: 16px;
+  width: 13px;
 }
 
 .card-right {
