--- a/base.css
+++ b/base.css
@@ -84,6 +84,10 @@ input[type='number'] {
   -moz-appearance: textfield; /* Firefox */
 }
 
+input {
+  min-width: 0;
+}
+
 @media (max-width: 375px) {
   :root {
     --strong: 2rem;
