--- a/main.css
+++ b/main.css
@@ -26,11 +26,10 @@
 }
 
 .input-field {
-  font-weight: bold;
-  text-align: right;
-  outline: none;
-  border: none;
   border: 2px solid transparent;
+  text-align: right;
+  font-weight: bold;
+  outline: none;
   background-color: var(--light);
   color: var(--dark-cyan);
   padding: 6px 18px 6px 38px;
@@ -101,7 +100,8 @@
   border-radius: 5px;
 }
 
-.input-tip:hover {
+.input-tip:hover,
+.input-tip:focus {
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   background-color: var(--bright-cyan-hover);
