Organised DOM elements at top of javascript

--- a/base.css
+++ b/base.css
@@ -21,6 +21,8 @@
   --bright-cyan-hover: #9fe8df;
   --disabled-cyan: #0d686d;
 
+  --error: #e17457;
+
   /* Neutral */
   --gray: #9ebbbd;
   --light: #f3f9fa;
