--- a/main.css
+++ b/main.css
@@ -217,6 +217,10 @@
   #totalTipPercentage::placeholder {
     text-align: center;
   }
+
+  .logo {
+    margin: 50px 0 40px 0;
+  }
 }
 
 @media (max-width: 450px) {
